# fhnw

./: .gitignore  README.md
Module/prcpp/12_Uebung_3/: CMakeLists.txt  Expression.h  Op.h  UnitTest.cpp  UnitTest.h  Vector.h
Module/syspr/workspace/: .gitignore  CMakeLists.txt
Module/syspr/workspace/exam1/: CMakeLists.txt
Module/syspr/workspace/exam1/dup/: CMakeLists.txt  main.c
Module/syspr/workspace/exam1/fork/: CMakeLists.txt  main.c
Module/syspr/workspace/exam1/grep/: CMakeLists.txt  main.c
Module/syspr/workspace/exam1/jmp/: CMakeLists.txt  main.c
Module/syspr/workspace/exam1/kill/: CMakeLists.txt  main.c
Module/syspr/workspace/exam1/namedpipe/: CMakeLists.txt  main.c
Module/syspr/workspace/exam1/pipe/: CMakeLists.txt  main.c
Module/syspr/workspace/exam1/signal/: CMakeLists.txt  main.c
Module/syspr/workspace/exam1/signalreplacement/: CMakeLists.txt  main.c
Module/syspr/workspace/week1/: CMakeLists.txt
Module/syspr/workspace/week1/ascii/: CMakeLists.txt  main.c
Module/syspr/workspace/week1/maximum/: CMakeLists.txt  main.c
Module/syspr/workspace/week1/numbers/: CMakeLists.txt  main.c
Module/syspr/workspace/week1/sum/: CMakeLists.txt  main.c
Module/syspr/workspace/week11/: CMakeLists.txt
Module/syspr/workspace/week11/exercise3/: CMakeLists.txt  main.c
Module/syspr/workspace/week12/: CMakeLists.txt
Module/syspr/workspace/week14/: CMakeLists.txt
Module/syspr/workspace/week5/: CMakeLists.txt
Module/syspr/workspace/week6/: CMakeLists.txt
Module/syspr/workspace/week7/: CMakeLists.txt
Module/syspr/workspace/week9/: CMakeLists.txt
(+1407 files in other folders)
