cmake_minimum_required(VERSION 3.0)
project(workspace)

add_subdirectory(week1)
add_subdirectory(week2)
add_subdirectory(week5)
add_subdirectory(week6)
add_subdirectory(week7)
add_subdirectory(week8)
add_subdirectory(week9)
add_subdirectory(week11)
add_subdirectory(week12)
add_subdirectory(week14)
add_subdirectory(exam1)
